fix(webapp): reinstate background image

--- a/software/device/webapp/src/components/header/style.css
+++ b/software/device/webapp/src/components/header/style.css
@@ -1,6 +1,5 @@
 .header {
-    /*background: url(/assets/images/bg-map-terrain.svg) center/200% #515050;*/
-    background: #0d99a5;
+    background: url(/assets/images/bg-map-terrain.svg) center/200% #515050;
     padding: 40px 0;
 }
 
