chore(rain-gauge): changes obtained through fetch

--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -112,3 +112,18 @@ fieldset {
     overflow-x: hidden;
     overflow-y: auto;
 }
+
+.toggleButton {
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+  }
+
+  .toggleButton:hover {
+    background-color: #e6e6e6;
+    border-color: #999;
+  }
