--- a/software/device/webapp/src/components/sensorconfig/maintenance/style.css
+++ b/software/device/webapp/src/components/sensorconfig/maintenance/style.css
@@ -8,3 +8,31 @@
     margin-top: 10px;
     display: flex;
 }
+
+/* .bigButton {
+    padding: 10px;
+    background-color: #0d99a5;
+    color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+} */
+
+.bigButton {
+    display: inline-block;
+    padding: 10px;
+    width: 50%;
+    border: none;
+    border-radius: 10px !important;
+    box-shadow: none;
+    background-color: #0d99a5;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
+}
+
+.bigButton:hover {
+    background-color: #0d82a6;
+}
