--- a/software/device/webapp/src/components/history/style.css
+++ b/software/device/webapp/src/components/history/style.css
@@ -3,3 +3,18 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.filter{
+    margin-bottom: 0.5em;
+    display: flex;
+    width: 11cm;
+    float: left;
+}
+
+.filter label {
+    text-align: right;
+    display: inline-block;
+    vertical-align: bottom;
+    width: 10em;
+    margin: 0 1em 0 0;
+}
