--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -37,6 +37,22 @@ fieldset {
     width: 10em;
     margin: 0 1em 0 0;
 }
+/* DROP_MENU ADDITIONS HERE */
+.aligned .alignGroup select {
+    text-align: left;
+    width: 10em;
+    margin: 0 1em 0 0;
+    /* margin-bottom: 10px;
+    margin-top: 10px; */
+    padding: 0.5em 0.6em;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 3px #ddd;
+    border-radius: 4px;
+    vertical-align: middle;
+    box-sizing: border-box;
+    flex-grow: 1;
+}
 
 .configBlock {
     padding: 10px;
