--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -1,16 +1,23 @@
 /*CSS shared by multiple components and app.tsx styles goes here*/
 
 
-form input, textarea{
+form input, textarea, select {
     padding: 0.5em 0.6em;
     display: inline-block;
     border: 1px solid #ccc;
     box-shadow: inset 0 1px 3px #ddd;
     border-radius: 4px;
+    border: 0;
+    padding: 0.8em;
+    /* box-shadow: inset 0 1px 3px #ddd; */
+    border-radius: 8px;
     vertical-align: middle;
     box-sizing: border-box;
     flex-grow: 1;
+    background-color: var(--mid-color);
+    color: var(--fg-color);
 }
+
 
 form input:focus {
     outline: 0;
@@ -163,3 +170,16 @@ fieldset {
     background-color: #e6e6e6;
     border-color: #999;
   }
+
+  .switchTheme{
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+    display: block;
+    width: fit-content;
+    cursor: pointer;
+    background: var(--card-color);
+    border-radius: 30em;
+    font-size: 0.7em;
+    padding: 1.2em 2em;
+}
