--- a/software/device/webapp/src/components/sensorconfig/configureblock/style.css
+++ b/software/device/webapp/src/components/sensorconfig/configureblock/style.css
@@ -11,8 +11,8 @@
 }
 
 .header {
-    background-color: #0d99a5;
-    color: white;
+    background-color: var(--accent-color);
+    color: var(--fg-color);
     padding: 10px;
     cursor: pointer;
 }
@@ -44,8 +44,8 @@
 .buttonsList button {
     text-decoration: none;
     padding: 5px;
-    color: rgb(13, 153, 165);
-    background: white none repeat scroll 0% 0%;
+    color: var(--fg-color);
+    background-color: var(--mid-color);
     display: inline-block;
     border: 1px solid rgb(13, 153, 165);
     border-radius: 5px;
