--- a/software/device/webapp/src/style/index.css
+++ b/software/device/webapp/src/style/index.css
@@ -3,7 +3,7 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background: #FAFAFA;
+	background: var(--bg-colour);
 	font-family: 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
 	color: #444;
@@ -21,4 +21,24 @@ html, body {
 
 h1, h2, h3 {
 	text-align: center;
+}
+
+:root{
+	--fg-colour: #000000;
+	--light-colour: #bbd6d8;
+	--mid-colour: #b0ced1;
+	--card-colour: #a2c4c7;
+	--bg-colour: #ffffff;
+	--accent-colour: #469ea7;
+	--light-accent-colour: #53b4bc;
+}
+
+[colour-theme="dark"] {
+	--fg-colour: #cbcbcb;
+	--light-colour: #72989b;
+	--mid-colour: #222d2f;
+	--card-colour: #213336;
+	--bg-colour: #191c1c;
+	--accent-colour: #145257;
+	--light-accent-colour: #2e6e73;
 }
