--- a/software/device/webapp/src/components/history/style.css
+++ b/software/device/webapp/src/components/history/style.css
@@ -2,6 +2,7 @@
     padding-bottom: 25px;
     padding-left: 10px;
     padding-right: 10px;
+    background-color: var(--bg-colour);
 }
 
 .filter{
