--- a/software/device/webapp/src/components/sensorconfig/maintenance/style.css
+++ b/software/device/webapp/src/components/sensorconfig/maintenance/style.css
@@ -1,12 +1,16 @@
 .maintenanceBlock {
     padding: .75rem 1.25rem;
-    border: 1px solid var(--accent-color);;
+    border: 1px solid var(--accent-color);
     border-radius: .25rem;
-    color: var(--accent-color);
-    background-color: var(--accent-color);
+    color: var(--text-color);
+    background-color: rgba(162, 196, 199, 0.5);
     margin-bottom: 10px;
     margin-top: 10px;
     display: flex;
+}
+
+.maintenancePopUp{
+    background: var(--bg-colour);
 }
 
 /* .bigButton {
