--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -94,6 +94,11 @@ fieldset {
     background-color: var(--light-accent-colour);
 }
 
+.addSensor{
+    background-color: rgba(185, 213, 215, 0.5);
+    color: rgb(73, 77, 77);
+}
+
 /* APP LAYOUT */
 
 .topHeader {
