--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -179,7 +179,7 @@ fieldset {
   .switchTheme{
     position: absolute;
     top: 1em;
-    right: 1em;
+    left: 1em;
     display: block;
     width: fit-content;
     cursor: pointer;
