feat(webapp): Fixed the issues high lighted in the comment made by Kaye in this branches merge request. These being the contast on the Raw Command Output container and the placement of the toggle button.

--- a/software/device/webapp/src/components/style.css
+++ b/software/device/webapp/src/components/style.css
@@ -159,7 +159,7 @@ fieldset {
   .switchTheme{
     position: absolute;
     top: 1em;
-    right: 1em;
+    left: 1em;
     display: block;
     width: fit-content;
     cursor: pointer;
